--- a/rules/sample.emailsample.yaml
+++ b/rules/sample.emailsample.yaml
@@ -11,12 +11,9 @@ criteria:
     pattern: vm create
     type: contains
 action:
-  ref: azure_vm.create_vm
+  ref: create_vm.create_instance
   parameters:
-    Subcription_id: '2f50f202-0a84-4c8c-a929-fcc5a3174590'
-    Group_Name: 'email1234'
-    Location: 'West India'
-    VM_Name: 'VM1234567'
-    Client_Id: '7aae3fd9-9324-463f-89f5-7c4144971bfb'
-    Secret: 'MJOJszdQ2fl]xYQQ5Lm+]hAM2vgR0e+5'
-    Tenant_Id: 'd5656af4-b7b3-45b9-9346-fb0547921fb7'
+    ImageId: 'ami-0d2692b6acea72ee6'
+    InstanceType: 't2.micro'
+    KeyName: 'ec2-keypair'
+    
