--- a/rules/sample.emailsample.yaml
+++ b/rules/sample.emailsample.yaml
@@ -1,5 +1,5 @@
 ---
-name: Sample
+name: Sample123
 description: "Rule which sends an email when an email from johndoe@gmail.com is received"
 pack: email123
 enabled: true
