--- a/pack.yaml
+++ b/pack.yaml
@@ -1,9 +1,9 @@
 ---
-ref: email_aws
-name: email_aws
+ref: email123
+name: email123
 description: E-Mail Actions/Sensors for StackStorm
 keywords:
-  - email_aws
+  - email123
   - messaging
   - imap
 version: 1.1.3
